tests/baselines/reference/nonIterableRestElement3.errors.txt
tests/cases/conformance/es6/destructuring/nonIterableRestElement3.ts(2,5): error TS2737: Property 'bogus' is missing in type '(string | number)[]' but present in type '{ bogus: number; }'.


==== tests/cases/conformance/es6/destructuring/nonIterableRestElement3.ts (1 errors) ====
    var c = { bogus: 0 };
    [...c] = ["", 0];
        ~
!!! error TS2737: Property 'bogus' is missing in type '(string | number)[]' but present in type '{ bogus: number; }'.